# hps-gpr

./: .gitignore  README.md  config_2015_10k.yaml  config_2015_2016_10pct_2021_1pct_10k.yaml  config_2015_2016_10pct_2021_1pct_10k_rpen7.yaml  config_2015_2016_combined_10k.yaml  config_2016_10pct_10k.yaml  config_2021_1pct_10k.yaml  config_example.yaml  hps-gpr  my_config.yaml  pyproject.toml  requirements.txt  startup.sh  submit_2015_10k.slurm  submit_2015_2016_combined_bands_10k.slurm  submit_2015_bands.sh  submit_2016_10pct_bands_10k.slurm  submit_all.sh  v15_8_HPS_simultaneous_GP_notebook_quality.ipynb
gp/: __init__.py  __main__.py  _fit.py  _limit_setting_gaussian.py  _mass_resolution.py  _plot.py
hps_gpr/: __init__.py  bands.py  cli.py  config.py  conversion.py  dataset.py  evaluation.py  extraction_display.py  gpr.py  injection.py  io.py  plotting.py  scan.py  slurm.py  statistics.py  template.py  validation.py
hps_gpr_analysis_note/: .gitignore  FIGURE_MANIFEST.md  hps_gpr_analysis_note.bib  main.tex
study_configs/: README_signal_injection_and_global_significance.md  config_2015_2016_10pct_2021_1pct_blind1p64_95CL_10k_injection.yaml  config_2015_2016_2021_1pct_combined_extraction_display_v15p8.yaml  config_2015_2016_combined_blind1p64_90CL_10k_injection.yaml  config_2015_2016_combined_blind1p64_95CL_10k_injection.yaml  config_2015_2016_combined_blind1p64_95CL_10k_injection_gpmean_pseudoexp.yaml  config_2015_2016_combined_blind1p96_90CL_10k_injection.yaml  config_2015_2016_combined_blind1p96_95CL_10k_injection.yaml  config_2015_extraction_display_v15p8.yaml  (+14 more)
(+24 files in other folders)
